# ticketly-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_database_setup.py  0002_initial_domain_models.py
app/: main.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  customer.py  role.py  ticket.py  ticket_category.py  ticket_comment.py  ticket_priority.py  ticket_status.py  user.py
app/observability/: __init__.py  logging.py  metrics.py  middleware.py
app/repositories/: __init__.py  base.py  customer.py  role.py  ticket.py  ticket_category.py  ticket_comment.py  ticket_priority.py  ticket_status.py  user.py
app/schemas/: __init__.py  auth.py  base.py  customer.py  health.py  metrics.py  role.py  ticket.py  ticket_category.py  ticket_comment.py  ticket_priority.py  ticket_status.py  user.py
app/seed/: __init__.py  initial_data.py
app/services/: __init__.py  auth_service.py  base.py  customer.py  exceptions.py  health_service.py  role.py  ticket.py  ticket_category.py  ticket_comment.py  ticket_comment_service.py  ticket_priority.py  ticket_service.py  user.py  (+1 more)
docs/: api-endpoints.md  architecture.md  authentication.md  business-flow.md  ci.md  database-schema.md  database.md  deployment.md  development-guidelines.md  observability.md  schemas-and-repositories.md  seed.md  services.md  testing.md  ticket-comments.md  tickets.md
scripts/: seed_initial_data.py  start.sh
tests/: conftest.py  factories.py  test_api_endpoints.py  test_services.py
(+50 files in other folders)
