[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticketly-api"
version = "0.1.0"
description = "API REST para gestao de tickets e suporte tecnico."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic",
    "email-validator",
    "fastapi",
    "psycopg[binary]",
    "pwdlib[argon2]",
    "pydantic-settings",
    "pyjwt",
    "sqlalchemy>=2.0",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "black",
    "httpx",
    "mypy",
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
